--- a/client/src/components/Transport/styles.module.css
+++ b/client/src/components/Transport/styles.module.css
@@ -25,3 +25,135 @@
     cursor: pointer;
     margin-right: 20px;
 }
+
+.green_btn {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: green;
+    color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.red_btn {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: red;
+    color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.todo {
+    position: relative;
+    background-color: var(--dark);
+    padding: 16px;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    transition: 0.5s;
+    cursor: pointer;
+    margin-bottom: 16px;
+}
+
+.todo:hover {
+    opacity: 0.8;
+}
+
+.todo .text {
+    font-size: 20px;
+    color: white;
+}
+
+.todo .delete_todo {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 16px;
+    color: var(--light);
+    width: 24px;
+    height: 24px;
+    background-color: #AF1E2D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+}
+
+.todo .edit_todo {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 50px;
+    color: var(--light);
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #1e5daf;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+}
+
+.profile_info {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    gap: 5px;
+    margin-top: 5px;
+    color: white;
+}
+
+.accept_btn {
+    background-color: green;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.decline_btn {
+    background-color: red;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
