--- a/client/src/components/Main/styles.module.css
+++ b/client/src/components/Main/styles.module.css
@@ -26,6 +26,20 @@
     margin-right: 20px;
 }
 
+.black_btn {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
 .addPopup {
     position: fixed;
     bottom: 32px;
