--- a/client/src/components/Main/styles.module.css
+++ b/client/src/components/Main/styles.module.css
@@ -1,3 +1,8 @@
+.content {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .navbar {
     width: 100%;
     height: 70px;
@@ -113,4 +118,13 @@
     text-align: center;
     cursor: pointer;
     color: white;
+}
+
+.profile_info {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    gap: 16px;
+    margin-top: 32px;
 }
