--- a/client/src/components/Main/styles.module.css
+++ b/client/src/components/Main/styles.module.css
@@ -128,3 +128,9 @@
     gap: 16px;
     margin-top: 32px;
 }
+
+.card {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    transition: 0.3s;
+    padding: 10px;
+}
