--- a/client/src/components/Transport/styles.module.css
+++ b/client/src/components/Transport/styles.module.css
@@ -237,3 +237,10 @@
     cursor: pointer;
     color: white;
 }
+
+.card {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    transition: 0.3s;
+    padding: 10px;
+    margin-bottom: 10px;
+}
